--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 Django==3.0.5
+dj-database-url==0.3.0
 django-crispy-forms==1.9.1
 whitenoise==5.1.0
 Pillow==6.1.0
 django-heroku==0.3.1
 gunicorn==20.0.4
 django-storages==1.9.1
-dropbox==10.2.0
+dropbox==10.2.0	
 
