--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==3.0.5
+Django==3.0.7
 dj-database-url==0.5.0
 django-crispy-forms==1.9.1
 whitenoise==5.1.0
@@ -10,4 +10,4 @@ dropbox==10.2.0
 django-haystack==3.0b1
 django-cookie-law==2.0.3
 django-machina==1.1.1
-
+django-email-verification==0.0.7
