--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-Django==3.0.7
-dj-database-url==0.5.0
-django-crispy-forms==1.9.1
-whitenoise==5.1.0
-Pillow==6.1.0
-django-heroku==0.3.1
-gunicorn==20.0.4
-django-storages==1.9.1
-dropbox==10.2.0	
-django-haystack==3.0b1
-django-cookie-law==2.0.3
-django-machina==1.1.1
-django-email-verification==0.0.7
+Django>=3.0.7
+dj-database-url>=0.5.0
+django-crispy-forms>=1.9.1
+whitenoise>=5.1.0
+Pillow>=6.1.0
+django-heroku>=0.3.1
+gunicorn>=20.0.4
+django-storages>=1.9.1
+dropbox>=10.2.0	
+django-haystack>=3.0b1
+django-cookie-law>=2.0.3
+django-machina>=1.1.1
+django-email-verification>=0.0.7
